SubCInterpreter/Test/syntax_errors/function_scope.c
int function (){

  // this is an error
  int x = 1 + 10 + int;

  if(1){
    // this is an error
    int 1;
    // this is not an error
    printf("Hello World\n");
  }

  // this is not an error
  printf("function call.\n");

  int x;
  int y;

  return 1;
}

int main (){

  function();

  return 0;
}
